[package]
name = "shootingstars"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.14.0", features = [ "dynamic_linking", "jpeg", "wav" ] }
bevy_rapier2d = { version = "0.27.0", features = [ "debug-render-2d" ] }
leafwing-input-manager = "0.14.0"
rand = "0.8.5"

[profile.dev.package."*"]
opt-level = 3
codegen-units = 1
debug = false
